- Fixed bug #32647 (Using register_shutdown_function() with invalid callback can crash PHP)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@184839 c90b9560-bf6c-de11-be94-00142212c4b1